[package]
name = "rusty-routes-transformer"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true

[dependencies]
# osm-io = "0.1.4"
osm-io = { git = "https://github.com/takb/osm-io.git", branch = "mutable-model" }
anyhow = "1.0.82"
benchmark-rs = "0.1.1"
simple_logger = "4.3.3"
log = "0.4.21"
regex = "1.10.4"
csv = "1.3.0"
serde = { version = "1.0.199", features = ["derive"] }
wkt = "0.11.0"
multimap = "0.10.0"
geo = "0.28.0"
log4rs = "1.3.0"
btreemultimap = "0.1.1"
clap = { version = "4.5.9", features = ["derive"] }
bit-vec = "0.8.0"
georaster = "0.1.0"
#proj = "0.27.2"
#proj5 = "0.1.7" use proj4rs = "0.1.3" instead
proj4rs = { version = "0.1.3", features = ["crs-definitions"] }
#geo-types = "0.7.13"
epsg = "=11.1.2"
phf = "0.11.2"
#for lazy static hashmap (srs)
lazy_static = "1.4"
maplit = "1.0.2"
glob = "0.3"
rstar = "0.12.0"
rustc-hash = "2.0.0"
itertools = "0.13.0"
ctor = "0.2.8"

[dev-dependencies]
criterion = "0.5.1"
chrono = "0.4.37"
osm-pbf-parquet = { git = "https://github.com/brad-richardson/osm-pbf-parquet.git" }
osmpbf = { git = "https://github.com/b-r-u/osmpbf.git", features = ["rust-zlib"] }
num_cpus = "1.16.0"


[[bench]]
name = "benchmark_run_all"
harness = false
[[bench]]
name = "benchmark_run_country"
harness = false
[[bench]]
name = "benchmark_run_elevation"
harness = false
[[bench]]
name = "benchmark_run_minimal"
harness = false
[[bench]]
name = "benchmark_run_minimal_write"
harness = false
[[bench]]
name = "benchmark_run_node_filtering"
harness = false
[[bench]]
name = "osm_pbf_bench"
harness = false
[[bench]]
name = "osm_io_bench"
harness = false
[[bench]]
name = "osm_pbf_parquet_bench"
harness = false
