[package]
name = "rusty-routes-transformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3
overflow-checks = true

[dependencies]
# osm-io = "0.1.4"
osm-io = { git = "https://github.com/takb/osm-io.git", branch = "mutable-model" }
anyhow = "1.0.82"
benchmark-rs = "0.1.1"
simple_logger = "4.3.3"
log = "0.4.21"
regex = "1.10.4"
csv = "1.3.0"
serde = { version = "1.0.199", features = ["derive"] }
wkt = "0.10.3"
geo = "0.28.0"
log4rs = "1.3.0"
btreemultimap = "0.1.1"
clap = { version = "4.5.9", features = ["derive"] }
bit-vec = "0.6"
georaster = "0.1.0"
proj4rs = { version = "0.1.3", features = ["crs-definitions"] }
epsg = "=11.1.2"
maplit = "1.0.2"
glob = "0.3"
rstar = "0.12.0"
itertools = "0.11.0"
tempfile = "3.16.0"
