[tool.poetry]
name = "osm-transform"
version = "0.1.0"
description = ""
authors = ["Takara Baumbach <Takara.Baumbach@heigit.org>", "Julian Psotta <julian.psotta@heigit.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
