[tool.poetry]
name = "osm-transform"
version = "0.1.0"
description = ""
authors = ["Takara Baumbach <Takara.Baumbach@heigit.org>", "Julian Psotta <julian.psotta@heigit.org>"]
 readme = "README.md"
packages = [{ include = "osm_transform", from = "src" }]

[tool.poetry.scripts]
osm-transform = "osm_transform.main:app"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
urllib3 = "^1.26.9"
typer = {extras = ["all"], version = "^0.9.0"}
click = "^8.1.3"
click-extra = "^3.10.0"
rich = "^13.3.5"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
